--- a/app.json
+++ b/app.json
@@ -13,6 +13,10 @@
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
+    "color": "#888",
+    "selectedColor": "#1e88e5",
+    "backgroundColor": "#fff",
+    "borderStyle": "white",
     "list": [
       {
         "pagePath": "pages/index/index",
